Fix project tiles on mobile

--- a/styles/pages/projects.less
+++ b/styles/pages/projects.less
@@ -46,7 +46,7 @@
   .projects__tile-text {
     display: flex;
     flex-direction: column;
-    height: 300px;
+    @media @for-tablet-portrait-up {height: 300px;}
   }
 
   span {
